[gd_scene load_steps=7 format=2]

[ext_resource path="res://Green.material" type="Material" id=1]
[ext_resource path="res://Tile.gd" type="Script" id=2]

[sub_resource type="ArrayMesh" id=1]
resource_name = "square_forest_Cube901"
surfaces/0 = {
"aabb": AABB( -1, 0, -1, 2, 1.00001, 2.00001 ),
"array_data": PoolByteArray( 0, 0, 128, 191, 250, 255, 127, 63, 0, 0, 128, 63, 129, 0, 0, 127, 0, 57, 0, 60, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 129, 0, 0, 127, 34, 56, 0, 58, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 129, 0, 0, 127, 34, 56, 0, 60, 0, 0, 128, 191, 250, 255, 127, 63, 0, 0, 128, 191, 129, 0, 0, 127, 0, 57, 0, 58, 0, 0, 128, 63, 250, 255, 127, 63, 0, 0, 128, 63, 0, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 127, 34, 56, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 127, 34, 56, 0, 52, 0, 0, 128, 191, 250, 255, 127, 63, 0, 0, 128, 63, 0, 0, 0, 127, 0, 57, 0, 0, 0, 0, 128, 63, 250, 255, 127, 63, 0, 0, 128, 191, 127, 0, 0, 127, 0, 57, 0, 56, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 127, 0, 0, 127, 34, 56, 0, 52, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 127, 0, 0, 127, 34, 56, 0, 56, 0, 0, 128, 63, 250, 255, 127, 63, 0, 0, 128, 63, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 191, 250, 255, 127, 63, 0, 0, 128, 63, 0, 127, 129, 63, 0, 59, 0, 52, 0, 0, 128, 63, 250, 255, 127, 63, 0, 0, 128, 191, 0, 127, 129, 63, 0, 57, 0, 56, 0, 0, 128, 191, 250, 255, 127, 63, 0, 0, 128, 191, 0, 127, 129, 63, 0, 59, 0, 56, 0, 0, 128, 63, 250, 255, 127, 63, 0, 0, 128, 63, 0, 127, 129, 63, 0, 57, 0, 52, 0, 0, 128, 191, 250, 255, 127, 63, 0, 0, 128, 191, 127, 127, 0, 127, 0, 57, 0, 58, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 127, 127, 0, 127, 34, 56, 0, 56, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 127, 127, 0, 127, 34, 56, 0, 58, 0, 0, 128, 63, 250, 255, 127, 63, 0, 0, 128, 191, 127, 127, 0, 127, 0, 57, 0, 56, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 129, 127, 63, 34, 56, 0, 52, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 0, 129, 127, 63, 34, 56, 0, 58, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 0, 129, 127, 63, 34, 56, 0, 56, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 0, 129, 127, 63, 34, 56, 0, 0 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 1, 0, 3, 0, 4, 0, 6, 0, 5, 0, 4, 0, 5, 0, 7, 0, 8, 0, 10, 0, 9, 0, 8, 0, 9, 0, 11, 0, 12, 0, 14, 0, 13, 0, 12, 0, 13, 0, 15, 0, 16, 0, 18, 0, 17, 0, 16, 0, 17, 0, 19, 0, 20, 0, 22, 0, 21, 0, 20, 0, 21, 0, 23, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="Shader" id=2]
code = "shader_type spatial;

uniform float mix_ratio : hint_range(0.0, 1.0);
uniform vec4 target_color : hint_color;
uniform vec4 base_color = vec4(1.0);

void vertex() {
	VERTEX.y += sin(5.0 * TIME * VERTEX.x) * cos(3.0 * TIME + VERTEX.x) * mix_ratio;
}


void fragment() {

		ALBEDO = mix(base_color.rgb, target_color.rgb, mix_ratio);		
	
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/mix_ratio = 0.0
shader_param/target_color = Color( 0, 1, 0, 1 )
shader_param/base_color = Plane( 1, 1, 1, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.98, 0.1, 0.98 )

[node name="Tile" type="Spatial"]
script = ExtResource( 2 )

[node name="mesh" type="MeshInstance" parent="."]
transform = Transform( 0.98, 0, 0, 0, 0.1, 0, 0, 0, 0.98, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="Area" type="Area" parent="."]
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0813432, 0 )
shape = SubResource( 4 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.828188, 0.560451, 0, -0.560451, 0.828188, 0, 1.02238, 1.70397 )

[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
